修改bug  和测试

--- a/src/assets/element-common.scss
+++ b/src/assets/element-common.scss
@@ -8,8 +8,8 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 /*滚动条样式设置*/
 ::-webkit-scrollbar {
-  width: .5rem;
-  height: .5rem;
+  width: 1px;
+  height: 1px;
   background: rgba(255, 255, 255, 0.6);
 }
 ::-webkit-scrollbar-track {
@@ -19,7 +19,7 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
   border-radius: 0;
   background-color: rgba(95, 95, 95, 0.4);
   transition: all .2s;
-  border-radius: .5rem;
+  border-radius: 1px;
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(95, 95, 95, 0.7);
